updated the content

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,8 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Sri Lanka`s No.1 Buy now pay later service"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Buy Now Pay Later With 3 Easy Instalments"}'>
+</include>
+
+<include src="src/layouts/head.html" locals='{"pageDescription": "Enjoy peace of mind with Buy Now Pay Later. Pay in three simple instalments over 2 months and enjoy the freedom of BNPL when shopping online
+"}'>
 </include>
 
 <section class="header-section">
@@ -8,7 +12,7 @@
         <div class="row h-100">
             <div class="col-12 col-md-5 d-flex flex-column justify-content-start justify-content-md-center">
                 <div class="hero-section text-center text-md-start">
-                    <h1 class="mb-5 d-none d-md-block">
+                    <h1 style="font-size: 70px;" class="mb-5 d-none d-md-block">
                         <span>Shop Now</span>.<br>
                         <span>Pay Later.</span>
                     </h1>
@@ -26,10 +30,8 @@
                     </figure>
                 </div>
                 <div class="hero-section text-center text-md-start mt-5 mt-md-0">
-                    <h4 class="mp-text-dark-blue mt-5 mt-md-0 mb-4 mb-md-5">You can now shop at your favourite online store today
-                        and pay
-                        later using mintpay.</h4>
-                    <a class="mp-btn" href="/stores">Shop now</a>
+                    <h4 class="mp-text-dark-blue mt-5 mt-md-0 mb-4 mb-md-5">The new way of paying is here! Pay in 3 installments with 0% interest over period of 2 months.</h4>
+                    <a class="mp-btn" href="stores.html">Shop now</a>
                 </div>
             </div>
 
@@ -57,7 +59,7 @@
     <div class="container">
         <div class="header-text-block text-center">
             <h2 class="mp-text-dark-blue mb-4" data-aos="fade-down">How it works</h2>
-            <h4 data-aos="fade-down">We’ve partnered with your favourite retailers to offer you the flexibility to pay
+            <h4 data-aos="fade-down">We’ve partnered with your favourite retailers to offer you the flexibility to pay for your favourite products at ease. 
             </h4>
         </div>
 
@@ -66,19 +68,18 @@
                 data-aos-duration="1000">
                 <img class=" mb-lg-4" src="assets/img/how-it-works-1.png" alt="">
                 <h3 class="step-no mb-2">01.</h3>
-                <h5 class="px-sm-4">Choose Mintpay as the payment option at the checkout.</h5>
+                <h5 class="px-sm-4">Add your favourites to the cart and select Mintpay as the payment option at the checkout. Log into or create your Mintpay account instantly.</h5>
             </div>
             <div class="col-12 col-lg-4 mb-5 mb-lg-0" data-aos="flip-left" data-aos-offset="200"
                 data-aos-duration="1000">
                 <img class="mb-lg-4" src="assets/img/how-it-works-2.png" alt="">
                 <h3 class="step-no mb-2">02.</h3>
-                <h5 class="px-sm-4">Pay the first installment at point of purchase using debit or credit card.</h5>
+                <h5 class="px-sm-4">Your purchase is split into 3 installments. Pay only the first installment using your debit or credit card at the point of purchase.</h5>
             </div>
             <div class="col-12 col-lg-4" data-aos="flip-left" data-aos-offset="300" data-aos-duration="1000">
                 <img class="mb-lg-4" src="assets/img/how-it-works-3.png" alt="">
                 <h3 class="step-no mb-2">03.</h3>
-                <h5 class="px-sm-4">Get your order first and the balance amount will be automatically charged on the
-                    due dates.</h5>
+                <h5 class="px-sm-4">Get your order first and the balance amount will be automatically charged from your card over the next two months on the respective due dates.</h5>
             </div>
         </div>
     </div>
@@ -99,7 +100,7 @@
         <h4 class="mp-text-light mb-5" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1000">Payments are
             automatically charged from your debit or credit card</h4>
 
-        <a class="mp-btn" href="#" data-aos="fade-up" data-aos-offset="350" data-aos-duration="1000">Sign up now</a>
+        <a class="mp-btn" href="https://app.mintpay.lk/signup/" data-aos="fade-up" data-aos-offset="350" data-aos-duration="1000">Sign up now</a>
     </div>
 </section>
 <section class="split-section padding-6-t-b pb-0">
@@ -118,7 +119,7 @@
                 <h2 class="mp-text-dark-blue d-lg-none mb-4" data-aos="fade-left" data-aos-offset="100"
                     data-aos-duration="1000">Own your online shopping freedom</h2>
                 <h4 class="mb-5 pe-lg-5" data-aos="fade-left" data-aos-offset="200" data-aos-duration="1000">Don't let
-                    low balance ruin your shopping experience. With mintpay, you can
+                    low balance ruin your shopping experience. With Mintpay, you can
                     buy what you want-when you want it.</h4>
                 <a href="stores.html" class="mp-btn mp-btn--secondary" data-aos="fade-left" data-aos-offset="210"
                     data-aos-duration="1000">Shop now</a>
@@ -174,8 +175,7 @@
         <h2 class="mp-text-light mb-4" data-aos="fade-down" data-aos-duration="1000">Have a business and<br>want to sell
             with Mintpay?</h2>
 
-        <h4 class="mp-text-light mb-5" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">Convert more
-            customers, multiply your sales</h4>
+        <h4 class="mp-text-light mb-5" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">Give your customers the option to pay in a way they'll love. Drive more cutomers, increase conversions and boost your sales.</h4>
 
         <a class="mp-btn" href="partner-with-us.html" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1000">Partner with us</a>
     </div>
