--- a/src/partner-with-us.html
+++ b/src/partner-with-us.html
@@ -5,8 +5,8 @@
     <include src="src/layouts/main-header.html"></include>
     <div class="container text-center">
         <h1 class="font-weight-bold mp-text-dark-blue mb-4 ">Installments with Mintpay</h1>
-        <h4>Let your customers pay how they want, when they want. Boost sales, increase average order value and keep
-            them coming back for more.</h4>
+        <h4>Let your customers pay how they want, when they want. Drive sales, increase conversions and keep
+            the customers coming back.</h4>
     </div>
 </section>
 
@@ -20,9 +20,7 @@
                 </h2>
                 <h2 class="mp-text-dark-blue d-lg-none mb-4 font-weight-semibold">Give your customers the freedom they
                     deserve</h2>
-                <h4 class="pe-lg-5">Don't let
-                    Let your customers spread the cost. It is as easy as making a regular card purchase, but gives your
-                    customers more flexibility and increases their purchase power.</h4>
+                <h4 class="pe-lg-5">Let your customers spread the cost. It is as easy as making a regular card purchase, but gives your customers more flexibility and increases their purchase power.</h4>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="img-wrapper justify-content-lg-end">
@@ -48,7 +46,7 @@
             <div class="col-12 col-sm-6 col-lg-3 step-item mb-5 mb-lg-0">
                 <img class="mb-4" src="assets/img/truck.svg" alt="">
                 <h4 class="mb-3">Step 02:<span> Shipment</span></h4>
-                <p>Only the first installment is charged at the point of purchase and gets the order shipped right away.
+                <p>Only the first installment is charged at the point of purchase and customer gets the order shipped right away.
                 </p>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 step-item mb-5 mb-sm-0">
@@ -192,8 +190,7 @@
 <section class="partner-form-section padding-6-t-b">
     <div class="container">
         <h2 class="text-light mb-4 font-weight-semibold text-center">Write to us</h2>
-        <h4 class="text-light text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum non
-            voluptatum ratione eum tempore nesciunt a animi porro! Libero, doloremque.</h4>
+        <h4 class="text-light text-center">Whether you are a startup or large enterprise, we would love to give your customers the flexibility they deserve. Write to us today.</h4>
         <form class="mp-form row mt-5" action="">
             <div class="col-12 col-lg-6 mb-2">
                 <div class="mp-form-group">
