--- a/src/stores.html
+++ b/src/stores.html
@@ -17,19 +17,19 @@
     <div class="filter-block d-flex justify-content-center px-3 px-md-5">
         <div class="filter-block__slider">
             <div>
-                <div class="filter-block__slider__item">Featured</div>
+                <a href="#featured-block" class="filter-block__slider__item">Featured</a>
             </div>
             <div>
-                <div class="filter-block__slider__item">Women</div>
+                <a href="women.html/#women-block"  class="filter-block__slider__item">Women</a>
             </div>
             <div>
-                <div class="filter-block__slider__item">Men</div>
+                <a href="men.html/#men-block" class="filter-block__slider__item">Men</a>
             </div>
             <div>
-                <div class="filter-block__slider__item">Beauty &amp; Fragrance</div>
+                <a href="#beauty-block" class="filter-block__slider__item">Beauty &amp; Fragrance</a>
             </div>
             <div>
-                <div class="filter-block__slider__item">Jewelry &amp; Accessories</div>
+                <a href="#jewellery-block" class="filter-block__slider__item">Jewellery &amp; Accessories</a>
             </div>
             <!-- <div>
                 <div class="filter-block__slider__item">Miscellaneous</div>
@@ -39,8 +39,8 @@
 
     <div class="category-block">
         <div class="container">
-            <div class="category-block__title">Featured</div>
-            <p>Discover the latest and upcoming brands.</p>
+            <div id="featured-block" class="category-block__title">Featured</div>
+            <p>We’ve got you covered for every kind of occasion whether you are online shopping for dresses last minute or you simply need to do some early holiday shopping. Browse through some of the best brands around and take your pick!</p>
         </div>
 
         <div class="continer-fluid mt-5">
@@ -74,18 +74,6 @@
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/zigmajones.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://zigmajones.com/" target="_blank">
-                                <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Zigma Jones</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
                         <img src="assets/img/stores/stripes-checks.jpg" alt="">
                         <div class="store-link">
                             <a href="https://stripesandchecksinc.com/" target="_blank">
@@ -95,6 +83,18 @@
                     </div>
                     <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
                 </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/clubhouse.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.clubhousevivaldi.lk/" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Clubhouse Vivaldi</h5>
+                </div>
             </div>
         </div>
     </div>
@@ -102,9 +102,7 @@
     <div class="category-block">
         <div class="container">
             <div class="category-block__title">Women</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
-                optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
-                quasi incidunt quidem?</p>
+            <p>Ladies, take advantage of the selection we have on offer, pay overtime and get your hands on the outfits you have been eyeing all year long!</p>
         </div>
 
         <div class="continer-fluid mt-5">
@@ -192,7 +190,7 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/ekko.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://zigmajones.com/" target="_blank">
+                            <a href="https://www.ekko.style/" target="_blank">
                                 <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
                             </a>
                         </div>
@@ -229,7 +227,7 @@
 
     <div class="category-block">
         <div class="container">
-            <div class="category-block__title">Beauty &amp; Fragrance</div>
+            <div id="beauty-block" class="category-block__title">Beauty &amp; Fragrance</div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
                 optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
                 quasi incidunt quidem?</p>
@@ -239,7 +237,7 @@
             <!-- <div class="mobile-view-more d-flex justify-content-end px-4">
                 <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
             </div> -->
-            <div class="store-block">
+            <div class="store-block store-page">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/spa-ceylon.jpg" alt="">
@@ -268,7 +266,7 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/urban.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://urban.lk/" target="_blank">
+                            <a href="https://urban.lk/mintpay" target="_blank">
                                 <img class="b2w-logo square-logo" src="assets/img/stores/logos/urbanlk.png" alt="">
                             </a>
                         </div>
@@ -282,20 +280,18 @@
 
     <div class="category-block">
         <div class="container">
-            <div class="category-block__title">Jewelry &amp; Accessories</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
-                optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
-                quasi incidunt quidem?</p>
+            <div id="jewellery-block" class="category-block__title">Jewellery &amp; Accessories</div>
+            <p>If you are looking for the perfect set of earrings for an important dinner or a range of accessories to select from for special occassion, we bring you the most exquisite selections. Whether you need a bracelet design or a ring design coordinated, here are some stylish and intricate designs to meet your desire.</p>
         </div>
 
         <div class="continer-fluid mt-5">
             <!-- <div class="mobile-view-more d-flex justify-content-end px-4">
                 <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
             </div> -->
-            <div class="store-block">
+            <div class="store-block store-page">
                  <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/glitteray.jpg" alt="">
+                        <img src="assets/img/stores/glitteray_new.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.glitterayjewellery.com/" target="_blank">
                                 <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/glitteray.png" alt="">
