--- a/src/women.html
+++ b/src/women.html
@@ -5,7 +5,7 @@
     <include src="src/layouts/main-header.html"></include>
 
     <div class="bg-img-wrapper">
-        <img src="assets/img/best-sellers-bg.jpg" alt="">
+        <img src="assets/img/women-cover.jpg" alt="">
     </div>
 
     <div class="bg-img-text-block container text-center">
@@ -18,7 +18,7 @@
     </div>
 </section>
 
-<section class="stores-section overflow-x-hidden">
+<section id="women-block" class="stores-section overflow-x-hidden">
 
     <div class="category-block">
 
@@ -124,7 +124,7 @@
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/clubhouse.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://www.clubhousevivaldi.com/" target="_blank">
+                            <a href="https://www.clubhousevivaldi.lk/" target="_blank">
                                 <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="">
                             </a>
                         </div>
